# codegen

./: CMakeLists.txt
include/mb/codegen/: class.h  component.h  definable.h  destination.h  expression.h  lambda.h  statement.h  writer.h
src/: class.cpp  component.cpp  definable.cpp  destination.cpp  expression.cpp  lambda.cpp  statement.cpp  writer.cpp
tests/: CMakeLists.txt  codegen_test.cpp
